Issue #2224 #2164 - fixes nav jumps

--- a/webcompat/static/css/src/nav.css
+++ b/webcompat/static/css/src/nav.css
@@ -168,10 +168,6 @@
   top: 6px;
 }
 
-.nav-addon {
-  display: none;
-}
-
 @media screen and (min-width: 490px) {
   .nav-addon {
     display: inline-block;
